# atomic

./: .gitignore  Cargo.toml  atomic.toml  atomic_old.toml  cat.exe.stackdump  clippy.toml  config.rs  general_idea.txt  readme.md  todo.txt
scripts/: clean_temp.bat  clean_temp.sh  gen_docs.bat  gen_docs.sh  test.cmd  test.ps1  test.py
src/: clap.rs  cli.rs  command.rs  error.rs  git.rs  lib.rs  main.rs  plugin.rs  schema.rs  template.rs  toml.rs  tui.rs
template/: atomic.toml  c.toml  cpp.toml  csharp.toml  example.toml  go.toml  python.toml  ruby.toml  rust.toml
