[package]
name = "cargo-atomic"
version = "0.1.0"
edition = "2021"
authors = ["Ryan"]
description = "A CLI tool to help make local git commits easier."
repository = "https://github.com/ExtremelyRyan/atomic"
license = "MIT"
readme = "readme.md"
keywords = ["cli", "git"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

default-run = "atomic"

# can be used by other languages
[[bin]]
name = "atomic"
path = "src/main.rs"

# can be used as a cargo add-on
[[bin]]
name = "cargo-atomic"
path = "src/main.rs"

[dependencies]
clap = "4.5.4"
git2 = "0.18.3"
thiserror = "1.0.60"
toml = "0.8.12"
