[package]
name = "cargo-atomic"
version = "0.1.1"
edition = "2021"
authors = ["Ryan"]
description = "A CLI tool to help make local git commits easier."
repository = "https://github.com/ExtremelyRyan/atomic"
license = "MIT"
readme = "readme.md"
keywords = ["cli", "git"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

default-run = "atomic"

# can be used by other languages
[[bin]]
name = "atomic"
path = "src/main.rs"

# can be used as a cargo add-on
[[bin]]
name = "cargo-atomic"
path = "src/main.rs"

[dependencies]
chrono = "0.4.41"
clap = "4.5.34"
dirs = "6.0.0"
git2 = "0.20.1"
thiserror = "2.0.12"
toml = "0.8.12"
